# ctrade_v2

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: history_contract.py  routes.py  routes_manual.py
app/bots/: manager.py
app/broker/: __init__.py  base.py  ctrader.py  ctrader_market_data.py
app/db/: repository.py
app/services/: bar_builder.py  ctrader_client.py  internal_event_bus.py  market_data_hub.py  sltp.py  whatsapp_alerts.py
app/strategies/: base.py  peak_dip_m5_m1.py  registry.py
app/strategies/fast_test/: strategy.py
app/strategies/leg_continuation/: __init__.py  pivots.py  strategy.py  strategy_m5_m1.py
app/strategies/peak_dip/: detector_h4.py  entry_m15.py  filters.py  strategy.py  trade_manager.py  utils.py
app/utils/: time.py
ctrade_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
db/migrations/: 20260309_01_bot_strategy_columns.sql
docs/: API_DIAGNOSTICO_CTRADER.md  BOT_API_DOCUMENTATION.md  FRONTEND_CAMBIOS_ETAPA_BOTS.md  FRONT_BOT_DETAIL_TRADES_HANDOFF.md  FRONT_INTEGRATION_CHECKLIST.md  FRONT_LEG_CONTINUATION_M5_M1_REALTIME_GUIDE.md  FRONT_LEG_CONTINUATION_TRIGGER_CONTRACT.md  FRONT_REGISTRO_HANDOFF.md  FRONT_REPO_HANDOFF.md  FRONT_RUNTIME_HANDOFF_LEG_CONTINUATION_M5_M1.md  LEG_CONTINUATION_H4_M15_BACKEND_HANDOFF.md  OPTIMIZACION_API.md  STRATEGY_REGISTRY_DB_DESIGN.md
tests/: test_history_contract.py  test_sltp.py
