[project]
name = "ctrade-v2"
version = "0.1.0"
description = "Clean cTrader bot API"
authors = [{ name = "Francisco" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pandas",
    "numpy",
    "ctrader-open-api",
    "twisted",
    "psycopg[binary]"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
dev = "app.main:run_dev_server"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
